Добавление секции benefit

--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
       </div>
     </section>
 
+    <section class="benefit">
+      <div class="benefit__item">
+        <div class="benefit__info">
+          <h2 class="benefit__title">Активности</h2>
+          <p class="benefit__text">К вашим услугам наши прекрасные повора, которые приготовят вкусную еду по составленную для вас персональному меню. Также вы сможете воспользоваться СПА, тренажерным залом и прочими услугами, доступными на нашей территории.</p>
+        </div>
+        <img src="./images/benefit1.jpg" alt="Чоканье бокалов" class="benefit__image">
+      </div>
+      <div class="benefit__item">
+        <div class="benefit__info">
+          <h2 class="benefit__title">100% Натуральные продукты</h2>
+          <p class="benefit__text">При приготовлении наших блюд мы используем только свежие, полезные, натуральные продукты.</p>
+        </div>
+        <img src="./images/benefit2.jpg" alt="Блюдо от шеф-повара" class="benefit__image">
+      </div>
+    </section>
+
   </div> <!--/container -->
 </body>
 </html>
