--- a/index.html
+++ b/index.html
@@ -65,7 +65,61 @@
         <img src="./images/benefit2.jpg" alt="Блюдо от шеф-повара" class="benefit__image">
       </div>
     </section>
-
   </div> <!--/container -->
+
+  <section class="interior">
+    <h2 class="interior__title">Наши интерьеры</h2>
+    <div class="interior__grid">
+      <img src="./images/interior1.jpg" alt="Интерьер №1" class="interior__photo">
+      <img src="./images/interior2.jpg" alt="Интерьер №2" class="interior__photo">
+      <img src="./images/interior3.jpg" alt="Интерьер №3" class="interior__photo">
+      <img src="./images/interior4.jpg" alt="Интерьер №4" class="interior__photo">
+    </div>
+  </section>
+
+  <div class="container">
+    <section class="reservation">
+      <div class="reservation__info">
+        <h2 class="reservation__title">Выберите ваш дом</h2>
+        <p class="reservation__text">У нас есть дома для любых мероприятий. Для большой компании у нас есть двухэтажный дом на самом краю леса.</p>
+        <button class="button">Подробнее</button>
+      </div>
+      <ul class="cards">
+        <li class="cards__item">
+          <img src="./images/card1.jpg" alt="Маленький домик" class="cards__image">
+          <h3 class="cards__title">Маленький домик</h3>
+          <p class="cards__text">Уютный коттедж с  3 спальнями и  бильярдом.</p>
+          <a href="#" class="cards__link">Подробнее &rarr;</a>  
+        </li>
+        <li class="cards__item">
+          <img src="./images/card2.jpg" alt="Большой дом" class="cards__image">
+          <h3 class="cards__title">Большой дом</h3>
+          <p class="cards__text">266 кв.м. с тремя спальнями, четырьмя санузлами, камином и бильярдом.</p>
+          <a href="#" class="cards__link">Подробнее &rarr;</a>  
+        </li>
+        <li class="cards__item">
+          <img src="./images/card3.jpg" alt="Двухэтажный дом" class="cards__image">
+          <h3 class="cards__title">Двухэтажный дом</h3>
+          <p class="cards__text">Коттедж с сауной, четырьмя спальнями и бильярдом. Идеально подойдет для полноценного празднования нового года.</p>
+          <a href="#" class="cards__link">Подробнее &rarr;</a>  
+        </li>
+      </ul>
+    </section>
+
+    <section class="reviews">
+      <h2 class="reviews__title">Отзывы</h2>
+      <img src="./images/avatar.jpg" alt="Аватар Ирины Ивановой" class="reviews__avatar">
+      <p class="reviews__text">Мы очень долго искали коттедж, чтобы отметить день рождение. Все очень понравилось. Комфортно, уютно,не дом, а сказка. Все очень понравилось,, хочется приехать еще сюда не один раз</p>
+      <p class="reviews__author">Ирина Иванова</p>
+      <div class="slider">
+        <span class="slider__item"></span>
+        <span class="slider__item slider__item_active"></span>
+        <span class="slider__item"></span>
+        <span class="slider__item"></span>
+      </div>
+    </section>
+
+  </div> <!-- /container -->
+
 </body>
 </html>
