Добавление новых секций

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>HotelBooking</title>
 </head>
 <body class="page">
-
   <div class="container">
     <header class="header">
       <div class="logo logo_place_header">HotelBooking</div>
@@ -33,13 +32,9 @@
         <p class="lead__text">Самые выгодные предложения по аренде коттеджей и загородных домов в Москве и области</p>
         <button class="button">Бронирование</button>
       </div>
-      <div class="lead__picture">
-        <img class="lead__image" src="./images/lead-1.jpg" alt="Первая часть дома">
-        <img class="lead__image" src="./images/lead-2.jpg" alt="Вторая часть дома">
-        <img class="lead__image" src="./images/lead-3.jpg" alt="Третья часть дома">
-      </div>
+      <img src="./images/lead.jpg" alt="Дом" class="lead__image">
     </section>
-
+  
     <section class="about">
       <img class="about__image" src="./images/about.jpg" alt="Двухэтажный дом в норвежском стиле">
       <div class="about__info">
@@ -66,7 +61,7 @@
       </div>
     </section>
   </div> <!--/container -->
-
+  
   <section class="interior">
     <h2 class="interior__title">Наши интерьеры</h2>
     <div class="interior__grid">
@@ -76,7 +71,7 @@
       <img src="./images/interior4.jpg" alt="Интерьер №4" class="interior__photo">
     </div>
   </section>
-
+  
   <div class="container">
     <section class="reservation">
       <div class="reservation__info">
@@ -105,7 +100,7 @@
         </li>
       </ul>
     </section>
-
+  
     <section class="reviews">
       <h2 class="reviews__title">Отзывы</h2>
       <img src="./images/avatar.jpg" alt="Аватар Ирины Ивановой" class="reviews__avatar">
@@ -118,8 +113,66 @@
         <span class="slider__item"></span>
       </div>
     </section>
-
   </div> <!-- /container -->
-
+  <footer class="footer">
+    <div class="container container__footer">
+      <div class="footer__info">
+        <div class="logo logo_place_footer">HotelBooking</div>
+        <p class="footer__text">Загородный отдых с замечательными видами</p>
+        <div class="footer__social">
+          <a href="#" class="footer__link-social">
+            <img src="./images/footer-twitter.svg" alt="Твиттер" class="footer__social-icon">
+          </a>
+          <a href="#" class="footer__link-social">
+            <img src="./images/footer-instagram.svg" alt="Инстаграм" class="footer__social-icon">
+          </a>
+          <a href="#" class="footer__link-social">
+            <img src="./images/footer-facebook.svg" alt="Фэйсбук" class="footer__social-icon">
+          </a>
+        </div>
+      </div>
+      <div class="footer__columns">
+        <div class="footer__column">
+          <h3 class="footer__column-title">Дома</h3>
+          <ul class="footer__list">
+            <li class="footer__list-item">
+              <a href="#" class="footer__link">Маленький домик</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__link">Большой дом</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__link">Двухэтажный дом</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__column">
+          <h3 class="footer__column-title">Бронирование</h3>
+          <ul class="footer__list">
+            <li class="footer__list-item">
+              <a href="#" class="footer__link">Оформление</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__link">Оплата</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__column">
+          <h3 class="footer__column-title">Контакты</h3>
+          <ul class="footer__list">
+            <li class="footer__list-item">
+              <a href="tel:88005553535" class="footer__link">8-800-555-35-35</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="mailto:email@yandex.ru" class="footer__link">email@yandex.ru</a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__link">Деревня Кимжа</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
